--- a/angular-app/src/app/components/pages/login/login.component.html
+++ b/angular-app/src/app/components/pages/login/login.component.html
@@ -1,3 +1,14 @@
-<p>
-  login works!
-</p>
+<form class="form-signin">
+  <h1 class="h3 mb-3 font-weight-normal">
+      Code Shopping - Login
+  </h1>
+  <label for="email" class="sr-only">
+      E-mail
+  </label>
+  <input type="email" id="email" class="form-control" placeholder="Digite o e-mail" required autofocus>
+  <label for="password" class="sr-only">Password</label>
+  <input type="password" id="password" class="form-control" placeholder="Digite sua senha" required>
+  <button class="btn btn-lg btn-primary btn-block" type="submit">
+      Entrar
+  </button>
+</form>
