--- a/angular-app/src/app/components/pages/login/login.component.html
+++ b/angular-app/src/app/components/pages/login/login.component.html
@@ -5,7 +5,7 @@
   <label for="email" class="sr-only">
       E-mail
   </label>
-  <input type="email" id="email" class="form-control" placeholder="Digite o e-mail" required autofocus>
+  <input type="email" id="email" class="form-control" placeholder="Digite o e-mail" required autofocus value="{{ email }}">
   <label for="password" class="sr-only">Password</label>
   <input type="password" id="password" class="form-control" placeholder="Digite sua senha" required>
   <button class="btn btn-lg btn-primary btn-block" type="submit">
