--- a/angular-app/src/app/components/pages/login/login.component.html
+++ b/angular-app/src/app/components/pages/login/login.component.html
@@ -5,10 +5,12 @@
   <label for="email" class="sr-only">
       E-mail
   </label>
-  <input type="email" id="email" class="form-control" placeholder="Digite o e-mail" required autofocus value="{{ email }}">
-  <label for="password" class="sr-only">Password</label>
-  <input type="password" id="password" class="form-control" placeholder="Digite sua senha" required>
-  <button class="btn btn-lg btn-primary btn-block" type="submit">
+  <input type="email" id="email" class="form-control" placeholder="Digite o e-mail" required autofocus [value]="email">
+  <label for="password" class="sr-only">
+      Senha
+  </label>
+  <input type="password" id="password" class="form-control" placeholder="Digite sua senha" required (keypress)="digitou($event)">
+  <button class="btn btn-lg btn-primary btn-block" type="submit" (click)="meClicou($event)">
       Entrar
   </button>
 </form>
