--- a/angular-app/src/app/components/pages/category/category-list/category-list.component.html
+++ b/angular-app/src/app/components/pages/category/category-list/category-list.component.html
@@ -1,3 +1,10 @@
-<p>
-  category-list works!
-</p>
+<table class="table table-hover">
+    <thead>
+        <tr>
+            <th>Categoria</th>
+        </tr>
+    </thead>
+    <tbody>
+        
+    </tbody>
+</table>
