--- a/angular-app/src/app/components/pages/category/category-list/category-list.component.html
+++ b/angular-app/src/app/components/pages/category/category-list/category-list.component.html
@@ -1,10 +1,24 @@
-<table class="table table-hover">
-    <thead>
-        <tr>
-            <th>Categoria</th>
-        </tr>
-    </thead>
-    <tbody>
-        
-    </tbody>
-</table>
+<div class="row">
+    <h1>Listagem de Categorias</h1>
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <td colspan="5">
+                    <button class="btn">
+                        Nova categoria
+                    </button>
+                </td>
+            </tr>
+            <tr>
+                <th style="width: 5%">ID</th>
+                <th style="width: 65%">Nome</th>
+                <th style="width: 10%">Ativa?</th>
+                <th style="width: 10%">Criada em</th>
+                <th style="width: 10%">Ações</th>
+            </tr>
+        </thead>
+        <tbody>
+
+        </tbody>
+    </table>
+</div>
