--- a/angular-app/src/app/components/pages/category/category-list/category-list.component.html
+++ b/angular-app/src/app/components/pages/category/category-list/category-list.component.html
@@ -1,10 +1,10 @@
 <div class="row">
     <h1>Listagem de Categorias</h1>
-    <table class="table table-striped">
+    <table class="table table-striped table-hover">
         <thead>
             <tr>
                 <td colspan="5">
-                    <button class="btn">
+                    <button class="btn btn-primary">
                         Nova categoria
                     </button>
                 </td>
@@ -18,7 +18,13 @@
             </tr>
         </thead>
         <tbody>
-
+            <tr *ngFor="let category of categories">
+                <td>{{category.id}}</td>
+                <td>{{category.name}}</td>
+                <td>{{category.active ? 'Sim' : 'Não'}}</td>
+                <td>{{category.created_at.date}}</td>
+                <td>Ações</td>
+            </tr>
         </tbody>
     </table>
 </div>
