--- a/angular-app/src/app/components/pages/category/category-list/category-list.component.html
+++ b/angular-app/src/app/components/pages/category/category-list/category-list.component.html
@@ -22,8 +22,8 @@
                 <td>{{category.id}}</td>
                 <td>{{category.name}}</td>
                 <td>{{category.active ? 'Sim' : 'Não'}}</td>
-                <td>{{category.created_at.date}}</td>
-                <td>Ações</td>
+                <td>{{category.created_at.date | date: 'dd/MM/yyyy'}}</td>
+                <td>Editar | Excluir</td>
             </tr>
         </tbody>
     </table>
