--- a/angular-app/src/app/components/pages/category/category-list/category-list.component.html
+++ b/angular-app/src/app/components/pages/category/category-list/category-list.component.html
@@ -11,17 +11,19 @@
             </tr>
             <tr>
                 <th style="width: 5%">ID</th>
-                <th style="width: 65%">Nome</th>
+                <th style="width: 50%">Nome</th>
                 <th style="width: 10%">Ativa?</th>
                 <th style="width: 10%">Criada em</th>
-                <th style="width: 10%">Ações</th>
+                <th style="width: 25%">Ações</th>
             </tr>
         </thead>
         <tbody>
             <tr *ngFor="let category of categories">
                 <td>{{category.id}}</td>
                 <td>{{category.name}}</td>
-                <td>{{category.active ? 'Sim' : 'Não'}}</td>
+                <td>
+                    <i class="fas" [ngClass]="{'fa-check': category.active, 'fa-times': !category.active}"></i>
+                </td>
                 <td>{{category.created_at.date | date: 'dd/MM/yyyy'}}</td>
                 <td>Editar | Excluir</td>
             </tr>
