--- a/angular-app/src/app/components/pages/login/login.component.html
+++ b/angular-app/src/app/components/pages/login/login.component.html
@@ -2,9 +2,9 @@
   <h1 class="h3 mb-3 font-weight-normal">
       Code Shopping - Login
   </h1>
-  <div class="alert alert-danger" *ngIf="showMessageError">
-      <i class="fas fa-exclamation-triangle"></i>&nbsp;Credenciais inválidas
-  </div>
+  <alert-error *ngIf="showMessageError">
+      Credenciais inválidas
+  </alert-error>
   <label for="email" class="sr-only">
       E-mail
   </label>
