Permitindo fechamento de alert no padrão Bootstrap

--- a/angular-app/src/app/components/bootstrap/alert-error/alert-error.component.html
+++ b/angular-app/src/app/components/bootstrap/alert-error/alert-error.component.html
@@ -1,3 +1,7 @@
 <div class="alert alert-danger">
-    <i class="fas fa-exclamation-triangle"></i>&nbsp;<ng-content></ng-content>
+    <i class="fas fa-exclamation-triangle"></i>&nbsp;
+    <ng-content></ng-content>
+    <button type="button" class="close" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
 </div>
