--- a/angular-app/src/app/components/pages/category/category-list/category-list.component.html
+++ b/angular-app/src/app/components/pages/category/category-list/category-list.component.html
@@ -4,7 +4,7 @@
         <thead>
             <tr>
                 <td colspan="5">
-                    <button class="btn btn-primary" data-toggle="modal" data-target="#exampleModel">
+                    <button class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
                         Nova categoria
                     </button>
                 </td>
@@ -30,17 +30,12 @@
         </tbody>
     </table>
 </div>
-<div class="modal" tabindex="-1" role="dialog" id="exampleModel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Nova categoria</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-          <form (submit)="submit()" id="frmNovaCategoria">
+<form (submit)="submit()">  
+    <modal>
+        <div modal-title>
+            Nova categoria
+        </div>
+        <div modal-body>
             <div class="form-group">
                 <label for="name">Nome</label>
                 <input type="text" 
@@ -51,16 +46,15 @@
                        placeholder="Informe um nome para a nova categoria"
                        [(ngModel)]="category.name">
             </div>
-          </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">
-            Fechar
-        </button>
-        <button type="submit" class="btn btn-primary" form="frmNovaCategoria">
-            Incluir
-        </button>
-      </div>
-    </div>
-  </div>
-</div>
+        </div>
+        <div modal-footer>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                Fechar
+            </button>
+            &nbsp;
+            <button type="submit" class="btn btn-primary">
+                Incluir
+            </button>
+        </div>
+    </modal>
+</form>
