--- a/angular-app/src/app/components/pages/category/category-list/category-list.component.html
+++ b/angular-app/src/app/components/pages/category/category-list/category-list.component.html
@@ -4,7 +4,7 @@
         <thead>
             <tr>
                 <td colspan="5">
-                    <button class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                    <button class="btn btn-primary" data-toggle="modal" (click)="showModal()">
                         Nova categoria
                     </button>
                 </td>
