Usando novo modal no cadastro de categorias

--- a/angular-app/src/app/components/pages/category/category-list/category-list.component.html
+++ b/angular-app/src/app/components/pages/category/category-list/category-list.component.html
@@ -32,11 +32,9 @@
 </div>
 <form (submit)="submit()">  
     <modal (onHide)="hideModal($event)">
-        <div modal-title>
-            <h3>
-                Nova categoria
-            </h3>
-        </div>
+        <h5 modal-title>
+            Nova categoria
+        </h5>
         <div modal-body>
             <div class="form-group">
                 <label for="name">Nome</label>
