--- a/angular-app/src/app/components/pages/category/category-list/category-list.component.html
+++ b/angular-app/src/app/components/pages/category/category-list/category-list.component.html
@@ -4,7 +4,7 @@
         <thead>
             <tr>
                 <td colspan="5">
-                    <button class="btn btn-primary" data-toggle="modal" (click)="showModal()">
+                    <button class="btn btn-primary" data-toggle="modal" (click)="showModalInsert()">
                         Nova categoria
                     </button>
                 </td>
@@ -30,35 +30,4 @@
         </tbody>
     </table>
 </div>
-<form (submit)="submit()">  
-    <modal 
-        (onShowModal)="onShowModal($event)" 
-        (onShownModal)="onShownModal($event)" 
-        (onHideModal)="onHideModal($event)" 
-        (onHiddenModal)="onHiddenModal($event)">
-        <h5 modal-title>
-            Nova categoria
-        </h5>
-        <div modal-body>
-            <div class="form-group">
-                <label for="name">Nome</label>
-                <input type="text" 
-                       name="category.name" 
-                       id="name" 
-                       class="form-control" 
-                       required 
-                       placeholder="Informe um nome para a nova categoria"
-                       [(ngModel)]="category.name">
-            </div>
-        </div>
-        <div modal-footer>
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">
-                Fechar
-            </button>
-            &nbsp;
-            <button type="submit" class="btn btn-primary">
-                Incluir
-            </button>
-        </div>
-    </modal>
-</form>
+<category-new-modal></category-new-modal>
