Criando evento sucesso e erro para cadastro de categorias

--- a/angular-app/src/app/components/pages/category/category-list/category-list.component.html
+++ b/angular-app/src/app/components/pages/category/category-list/category-list.component.html
@@ -30,4 +30,7 @@
         </tbody>
     </table>
 </div>
-<category-new-modal></category-new-modal>
+<category-new-modal 
+    (onSuccess)="onInsertSuccess($event)" 
+    (onError)="onInsertError($event)">
+</category-new-modal>
