Componente de exclusão de categorias

--- a/angular-app/src/app/components/pages/category/category-list/category-list.component.html
+++ b/angular-app/src/app/components/pages/category/category-list/category-list.component.html
@@ -29,7 +29,10 @@
                     <a href="javascript:void(0)" (click)="showModalEdit(category)">
                         <i class="fas fa-edit"></i>
                     </a>
-                    | Excluir
+                    &nbsp;
+                    <a href="javascript:void(0)" (click)="showModalDelete(category)">
+                        <i class="fas fa-trash-alt"></i>
+                    </a>
                 </td>
             </tr>
         </tbody>
@@ -37,3 +40,4 @@
 </div>
 <category-new-modal (onSuccess)="onInsertSuccess($event)" (onError)="onInsertError($event)"></category-new-modal>
 <category-edit-modal (onSuccess)="onEditSuccess($event)" (onError)="onEditError($event)"></category-edit-modal>
+<category-delete-modal (onSuccess)="onDeleteSuccess($event)" (onError)="onDeleteError($event)"></category-delete-modal>
