--- a/angular-app/src/app/components/pages/category/category-list/category-list.component.html
+++ b/angular-app/src/app/components/pages/category/category-list/category-list.component.html
@@ -4,7 +4,7 @@
         <thead>
             <tr>
                 <td colspan="5">
-                    <button class="btn btn-primary" (click)="showModalInsert()">
+                    <button class="btn btn-primary" (click)="categoryInsertService.showModalInsert()">
                         Nova categoria
                     </button>
                 </td>
@@ -26,11 +26,11 @@
                 </td>
                 <td>{{category.created_at.date | date: 'dd/MM/yyyy'}}</td>
                 <td>
-                    <a href="javascript:void(0)" (click)="showModalEdit(category)">
+                    <a href="javascript:void(0)" (click)="categoryEditService.showModalEdit(category)">
                         <i class="fas fa-edit"></i>
                     </a>
                     &nbsp;
-                    <a href="javascript:void(0)" (click)="showModalDelete(category)">
+                    <a href="javascript:void(0)" (click)="categoryDeleteService.showModalDelete(category)">
                         <i class="fas fa-trash-alt"></i>
                     </a>
                 </td>
@@ -38,6 +38,15 @@
         </tbody>
     </table>
 </div>
-<category-new-modal (onSuccess)="onInsertSuccess($event)" (onError)="onInsertError($event)"></category-new-modal>
-<category-edit-modal (onSuccess)="onEditSuccess($event)" (onError)="onEditError($event)"></category-edit-modal>
-<category-delete-modal (onSuccess)="onDeleteSuccess($event)" (onError)="onDeleteError($event)"></category-delete-modal>
+<category-new-modal 
+    (onSuccess)="categoryInsertService.onInsertSuccess($event)" 
+    (onError)="categoryInsertService.onInsertError($event)">
+</category-new-modal>
+<category-edit-modal 
+    (onSuccess)="categoryEditService.onEditSuccess($event)" 
+    (onError)="categoryEditService.onEditError($event)">
+</category-edit-modal>
+<category-delete-modal 
+    (onSuccess)="categoryDeleteService.onDeleteSuccess($event)" 
+    (onError)="categoryDeleteService.onDeleteError($event)">
+</category-delete-modal>
