Iniciando com paginação

--- a/angular-app/src/app/components/pages/category/category-list/category-list.component.html
+++ b/angular-app/src/app/components/pages/category/category-list/category-list.component.html
@@ -18,7 +18,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let category of categories">
+            <tr *ngFor="let category of categories | paginate: { itemsPerPage: 5, currentPage: page }">
                 <td>{{category.id}}</td>
                 <td>{{category.name}}</td>
                 <td>
@@ -37,6 +37,11 @@
             </tr>
         </tbody>
     </table>
+    <pagination-controls 
+        (pageChange)="page = $event"
+        nextLabel="Próximo"
+        previousLabel="Anterior">
+    </pagination-controls>
 </div>
 <category-new-modal 
     (onSuccess)="categoryInsertService.onInsertSuccess($event)" 
