Esconder automaticamente os controles de paginação caso todos os dados caibam na página corrente; não exibir os botões de cada página em telas pequenas

--- a/angular-app/src/app/components/pages/category/category-list/category-list.component.html
+++ b/angular-app/src/app/components/pages/category/category-list/category-list.component.html
@@ -40,7 +40,9 @@
     <pagination-controls 
         (pageChange)="pageChange($event)"
         nextLabel="Próximo"
-        previousLabel="Anterior">
+        previousLabel="Anterior"
+        autoHide=true
+        responsive=true>
     </pagination-controls>
 </div>
 <category-new-modal 
