--- a/angular-app/src/app/components/pages/product/product-list/product-list.component.html
+++ b/angular-app/src/app/components/pages/product/product-list/product-list.component.html
@@ -4,8 +4,8 @@
       <thead>
           <tr>
               <td colspan="5">
-                  <button class="btn btn-primary" (click)="categoryInsertService.showModalInsert()">
-                      Nova produto
+                  <button class="btn btn-primary" (click)="productInsertService.showModalInsert()">
+                      Novo produto
                   </button>
               </td>
           </tr>
@@ -17,5 +17,31 @@
               <th style="width: 25%">Ações</th>
           </tr>
       </thead>
+      <tbody>
+            <tr *ngFor="let product of products | paginate: pagination">
+                <td>{{product.id}}</td>
+                <td>{{product.name}}</td>
+                <td>
+                    <i class="fas" [ngClass]="{'fa-check': product.active, 'fa-times': !product.active}"></i>
+                </td>
+                <td>{{product.created_at.date | date: 'dd/MM/yyyy'}}</td>
+                <td>
+                    <a href="javascript:void(0)" (click)="productEditService.showModalEdit(product)">
+                        <i class="fas fa-edit"></i>
+                    </a>
+                    &nbsp;
+                    <a href="javascript:void(0)" (click)="productDeleteService.showModalDelete(product)">
+                        <i class="fas fa-trash-alt"></i>
+                    </a>
+                </td>
+            </tr>
+      </tbody>
   </table>
+  <pagination-controls 
+        (pageChange)="pageChange($event)"
+        nextLabel="Próximo"
+        previousLabel="Anterior"
+        autoHide=true
+        responsive=true>
+    </pagination-controls>
 </div>
