Componente de cadastro de produtos

--- a/angular-app/src/app/components/pages/product/product-list/product-list.component.html
+++ b/angular-app/src/app/components/pages/product/product-list/product-list.component.html
@@ -49,3 +49,17 @@
         responsive=true>
     </pagination-controls>
 </div>
+<product-new-modal 
+    (onSuccess)="productInsertService.onInsertSuccess($event)" 
+    (onError)="productInsertService.onInsertError($event)">
+</product-new-modal>
+<!--
+<product-edit-modal 
+    (onSuccess)="productEditService.onEditSuccess($event)" 
+    (onError)="productEditService.onEditError($event)">
+</product-edit-modal>
+<product-delete-modal 
+    (onSuccess)="productDeleteService.onDeleteSuccess($event)" 
+    (onError)="productDeleteService.onDeleteError($event)">
+</product-delete-modal>
+-->
