--- a/angular-app/src/app/components/pages/category/category-list/category-list.component.html
+++ b/angular-app/src/app/components/pages/category/category-list/category-list.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" id="no-more-tables">
     <h1>Listagem de Categorias</h1>
     <table class="table table-striped table-hover">
         <thead>
@@ -19,13 +19,19 @@
         </thead>
         <tbody>
             <tr *ngFor="let category of categories | paginate: pagination">
-                <td>{{category.id}}</td>
-                <td>{{category.name}}</td>
-                <td>
+                <td data-title="ID:">
+                    {{category.id}}
+                </td>
+                <td data-title="Nome:">
+                    {{category.name}}
+                </td>
+                <td data-title="Ativa:">
                     <i class="fas" [ngClass]="{'fa-check': category.active, 'fa-times': !category.active}"></i>
                 </td>
-                <td>{{category.created_at.date | date: 'dd/MM/yyyy'}}</td>
-                <td>
+                <td data-title="Criada em:">
+                    {{category.created_at.date | date: 'dd/MM/yyyy'}}
+                </td>
+                <td data-title="Ações: ">
                     <a href="javascript:void(0)" (click)="categoryEditService.showModalEdit(category)">
                         <i class="fas fa-edit"></i>
                     </a>
