--- a/angular-app/src/app/components/pages/product/product-list/product-list.component.html
+++ b/angular-app/src/app/components/pages/product/product-list/product-list.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" id="no-more-tables">
   <h1>Listagem de Produtos</h1>
   <table class="table table-striped table-hover">
       <thead>
@@ -21,15 +21,25 @@
       </thead>
       <tbody>
             <tr *ngFor="let product of products | paginate: pagination">
-                <td>{{product.id}}</td>
-                <td [title]="product.description">{{product.name}}</td>
-                <td>{{product.stock}}</td>
-                <td>{{product.price}}</td>
-                <td>
+                <td data-title="ID: ">
+                    {{product.id}}
+                </td>
+                <td data-title="Nome: " [title]="product.description">
+                    {{product.name}}
+                </td>
+                <td data-title="Estoque: ">
+                    {{product.stock}}
+                </td>
+                <td data-title="Preço: ">
+                    {{product.price}}
+                </td>
+                <td data-title="Status: ">
                     <i class="fas" [ngClass]="{'fa-check': product.active, 'fa-times': !product.active}"></i>
                 </td>
-                <td>{{product.created_at.date | date: 'dd/MM/yyyy'}}</td>
-                <td>
+                <td data-title="Criado em: ">
+                    {{product.created_at.date | date: 'dd/MM/yyyy'}}
+                </td>
+                <td data-title="Ações: ">
                     <a href="javascript:void(0)" (click)="productEditService.showModalEdit(product)">
                         <i class="fas fa-edit"></i>
                     </a>
