Correção de título da modal

--- a/angular-app/src/app/components/pages/category/category-delete-modal/category-delete-modal.component.html
+++ b/angular-app/src/app/components/pages/category/category-delete-modal/category-delete-modal.component.html
@@ -1,6 +1,6 @@
 <modal>
     <h5 modal-title>
-        Exclusão de categorias
+        Exclusão de categoria
     </h5>
     <div modal-body>
         Deseja excluir a categoria {{category?.name}}?
