--- a/angular-app/src/app/components/pages/product/product-list/product-list.component.html
+++ b/angular-app/src/app/components/pages/product/product-list/product-list.component.html
@@ -11,12 +11,12 @@
           </tr>
           <tr>
               <th style="width: 5%">ID</th>
-              <th style="width: 30%">Nome</th>
-              <th style="width: 10%">Estoque</th>
-              <th style="width: 10%">Preço</th>
-              <th style="width: 10%">Ativo?</th>
-              <th style="width: 10%">Criado em</th>
-              <th style="width: 25%">Ações</th>
+              <th style="width: 45%">Nome</th>
+              <th style="width: 10%" class="text-right">Estoque</th>
+              <th style="width: 10%" class="text-right">Preço</th>
+              <th style="width: 10%" class="text-center">Ativo?</th>
+              <th style="width: 10%" class="text-center">Criado em</th>
+              <th style="width: 10%" class="text-center">Ações</th>
           </tr>
       </thead>
       <tbody>
@@ -27,19 +27,19 @@
                 <td data-title="Nome: " [title]="product.description">
                     {{product.name}}
                 </td>
-                <td data-title="Estoque: ">
+                <td data-title="Estoque: " class="text-right">
                     {{product.stock}}
                 </td>
-                <td data-title="Preço: ">
+                <td data-title="Preço: " class="text-right">
                     {{product.price}}
                 </td>
-                <td data-title="Status: ">
+                <td data-title="Status: " class="text-center">
                     <i class="fas" [ngClass]="{'fa-check': product.active, 'fa-times': !product.active}"></i>
                 </td>
-                <td data-title="Criado em: ">
+                <td data-title="Criado em: " class="text-center">
                     {{product.created_at.date | date: 'dd/MM/yyyy'}}
                 </td>
-                <td data-title="Ações: ">
+                <td data-title="Ações: " class="text-center">
                     <a href="javascript:void(0)" (click)="productEditService.showModalEdit(product)">
                         <i class="fas fa-edit"></i>
                     </a>
@@ -57,7 +57,7 @@
         previousLabel="Anterior"
         autoHide=true
         responsive=true>
-    </pagination-controls>
+  </pagination-controls>
 </div>
 <product-new-modal 
     (onSuccess)="productInsertService.onInsertSuccess($event)" 
