Pipe para formatar números decimais

--- a/angular-app/src/app/components/pages/product/product-list/product-list.component.html
+++ b/angular-app/src/app/components/pages/product/product-list/product-list.component.html
@@ -31,7 +31,7 @@
                     {{product.stock}}
                 </td>
                 <td data-title="Preço: " class="text-right">
-                    {{product.price}}
+                    R$ {{product.price | numberFormatBr}}
                 </td>
                 <td data-title="Status: " class="text-center">
                     <i class="fas" [ngClass]="{'fa-check': product.active, 'fa-times': !product.active}"></i>
