--- a/angular-app/src/app/components/pages/product/product-list/product-list.component.html
+++ b/angular-app/src/app/components/pages/product/product-list/product-list.component.html
@@ -7,6 +7,17 @@
                   <button class="btn btn-primary" (click)="productInsertService.showModalInsert()">
                       Novo produto
                   </button>
+                  &nbsp;
+                  <input type="checkbox" 
+                       name="active" 
+                       id="active"
+                       required 
+                       [(ngModel)]="onlyTrashed"
+                       (change)="getProducts()"
+                       >
+                  <label for="active">
+                    &nbsp;Somente excluídos?
+                  </label>
               </td>
           </tr>
           <tr>
@@ -40,13 +51,20 @@
                     {{product.created_at.date | date: 'dd/MM/yyyy'}}
                 </td>
                 <td data-title="Ações: " class="text-center">
-                    <a href="javascript:void(0)" (click)="productEditService.showModalEdit(product)">
-                        <i class="fas fa-edit"></i>
-                    </a>
-                    &nbsp;
-                    <a href="javascript:void(0)" (click)="productDeleteService.showModalDelete(product)">
-                        <i class="fas fa-trash-alt"></i>
-                    </a>
+                    <span *ngIf="!onlyTrashed">
+                        <a href="javascript:void(0)" (click)="productEditService.showModalEdit(product)">
+                            <i class="fas fa-edit"></i>
+                        </a>
+                        &nbsp;
+                        <a href="javascript:void(0)" (click)="productDeleteService.showModalDelete(product)">
+                            <i class="fas fa-trash-alt"></i>
+                        </a>
+                    </span>
+                    <span *ngIf="onlyTrashed">
+                        <a href="javascript:void(0)" (click)="productRestoreService.showModalRestore(product)">
+                            Restaurar
+                        </a>
+                    </span>
                 </td>
             </tr>
       </tbody>
@@ -71,3 +89,7 @@
     (onSuccess)="productDeleteService.onDeleteSuccess($event)" 
     (onError)="productDeleteService.onDeleteError($event)">
 </product-delete-modal>
+<product-restore-modal 
+    (onSuccess)="productRestoreService.onRestoreSuccess($event)" 
+    (onError)="productRestoreService.onRestoreError($event)">
+</product-restore-modal>
