--- a/angular-app/src/app/components/pages/product/product-restore-modal/product-restore-modal.component.html
+++ b/angular-app/src/app/components/pages/product/product-restore-modal/product-restore-modal.component.html
@@ -11,7 +11,7 @@
                 Fechar
             </button>
             &nbsp;
-            <button type="submit" class="btn btn-primary">
+            <button type="submit" class="btn btn-success">
                 Restaurar
             </button>
         </div>
