Exibir mensagem no caso de não haver registros a exibir

--- a/angular-app/src/app/components/pages/category/category-list/category-list.component.html
+++ b/angular-app/src/app/components/pages/category/category-list/category-list.component.html
@@ -41,6 +41,11 @@
                     </a>
                 </td>
             </tr>
+            <tr *ngIf="!categories.length">
+                <td colspan="5">
+                    Nada a exibir por enquanto :(
+                </td>
+            </tr>
         </tbody>
     </table>
     <pagination-controls 
