--- a/angular-app/src/app/components/pages/product/product-list/product-list.component.html
+++ b/angular-app/src/app/components/pages/product/product-list/product-list.component.html
@@ -66,6 +66,11 @@
                     </span>
                 </td>
             </tr>
+            <tr *ngIf="!products.length">
+                <td colspan="7">
+                    Nada a exibir por enquanto :(
+                </td>
+            </tr>
       </tbody>
   </table>
   <pagination-controls 
