Paginação alinhada a direita

--- a/angular-app/src/app/components/pages/category/category-list/category-list.component.html
+++ b/angular-app/src/app/components/pages/category/category-list/category-list.component.html
@@ -48,6 +48,9 @@
             </tr>
         </tbody>
     </table>
+</div>
+<hr>
+<div style="text-align: right;">
     <pagination-controls 
         (pageChange)="pageChange($event)"
         nextLabel="Próximo"
