--- a/angular-app/src/app/components/pages/product/product-list/product-list.component.html
+++ b/angular-app/src/app/components/pages/product/product-list/product-list.component.html
@@ -73,13 +73,16 @@
             </tr>
       </tbody>
   </table>
-  <pagination-controls 
+</div>
+<hr>
+<div style="text-align: right;">
+    <pagination-controls 
         (pageChange)="pageChange($event)"
         nextLabel="Próximo"
         previousLabel="Anterior"
         autoHide=true
         responsive=true>
-  </pagination-controls>
+    </pagination-controls>
 </div>
 <product-new-modal 
     (onSuccess)="productInsertService.onInsertSuccess($event)" 
