--- a/angular-app/src/app/components/pages/product/product-list/product-list.component.html
+++ b/angular-app/src/app/components/pages/product/product-list/product-list.component.html
@@ -1,6 +1,6 @@
 <div class="row" id="no-more-tables">
   <h1>Listagem de Produtos</h1>
-  <table class="table table-striped table-hover">
+  <table class="table table-striped table-hover table-sm">
       <thead>
           <tr>
               <td colspan="7">
