Links para navegação entre páginas

--- a/angular-app/src/app/components/pages/category/category-list/category-list.component.html
+++ b/angular-app/src/app/components/pages/category/category-list/category-list.component.html
@@ -7,6 +7,10 @@
                     <button class="btn btn-primary" (click)="categoryInsertService.showModalInsert()">
                         Nova categoria
                     </button>
+                    &nbsp;
+                    <a [routerLink]="'/products/list'" class="btn btn-success">
+                        Produtos
+                    </a>
                 </td>
             </tr>
             <tr>
