--- a/angular-app/src/app/components/pages/product/product-list/product-list.component.html
+++ b/angular-app/src/app/components/pages/product/product-list/product-list.component.html
@@ -8,6 +8,10 @@
                       Novo produto
                   </button>
                   &nbsp;
+                  <a [routerLink]="'/categories/list'" class="btn btn-success">
+                      Categorias
+                  </a>
+                  &nbsp;
                   <input type="checkbox" 
                        name="active" 
                        id="active"
