--- a/angular-app/src/app/components/pages/product/product-list/product-list.component.html
+++ b/angular-app/src/app/components/pages/product/product-list/product-list.component.html
@@ -25,7 +25,7 @@
           </tr>
           <tr>
               <th style="width: 5%">ID</th>
-              <th style="width: 45%">Nome</th>
+              <th style="width: 35%">Nome</th>
               <th style="width: 10%">Ativo?</th>
               <th style="width: 10%">Criado em</th>
               <th style="width: 10%">
@@ -38,7 +38,7 @@
                     Preço
                 </span>
               </th>
-              <th style="width: 10%">
+              <th style="width: 20%">
                 <span class="float-lg-right float-xl-right">
                     Ações
                 </span>
@@ -77,6 +77,10 @@
                         &nbsp;
                         <a href="javascript:void(0)" (click)="productDeleteService.showModalDelete(product)">
                             <i class="fas fa-trash-alt"></i>
+                        </a>
+                        &nbsp;
+                        <a [routerLink]="['/products', product.id, 'categories', 'list']">
+                            Categorias
                         </a>
                     </span>
                     <span class="float-lg-right float-xl-right" *ngIf="onlyTrashed">
