--- a/angular-app/src/app/components/pages/product-category/product-category-list/product-category-list.component.html
+++ b/angular-app/src/app/components/pages/product-category/product-category-list/product-category-list.component.html
@@ -1,3 +1,40 @@
-<div class="row">
-  <h1>Categorias do produto {{product?.name}}</h1>
+<div class="row" id="no-more-tables">
+  <h3>Categorias do produto {{product?.name}}</h3>
+  <table class="table table-striped table-hover table-sm">
+      <thead>
+          <tr>
+              <th style="width: 5%">ID</th>
+              <th style="width: 50%">Nome</th>
+              <th style="width: 15%">Ativa?</th>
+              <th style="width: 15%">Criada em</th>
+              <th style="width: 15%">Ações</th>
+          </tr>
+      </thead>
+      <tbody>
+          <tr *ngFor="let category of categories">
+              <td data-title="ID:">
+                  {{category.id}}
+              </td>
+              <td data-title="Nome:">
+                  {{category.name}}
+              </td>
+              <td data-title="Ativa:">
+                  <i class="fas" [ngClass]="{'fa-check': category.active, 'fa-times': !category.active}"></i>
+              </td>
+              <td data-title="Criada em:">
+                  {{category.created_at.date | date: 'dd/MM/yyyy'}}
+              </td>
+              <td data-title="Ações: ">
+                  <a href="javascript:void(0)">
+                      <i class="fas fa-trash-alt"></i>
+                  </a>
+              </td>
+          </tr>
+          <tr *ngIf="!categories?.length">
+              <td colspan="5">
+                  Nada a exibir por enquanto :(
+              </td>
+          </tr>
+      </tbody>
+  </table>
 </div>
