--- a/angular-app/src/app/components/pages/product-category/product-category-list/product-category-list.component.html
+++ b/angular-app/src/app/components/pages/product-category/product-category-list/product-category-list.component.html
@@ -3,6 +3,17 @@
   <table class="table table-striped table-hover table-sm">
       <thead>
           <tr>
+              <td colspan="5">
+                    <button class="btn btn-primary" (click)="productCategoryLinkService.showModalLink()">
+                        Vincular
+                    </button>
+                    &nbsp;
+                    <a [routerLink]="'/products/list'" class="btn btn-success">
+                        Produtos
+                    </a>
+              </td>
+          </tr>
+          <tr>
               <th style="width: 5%">ID</th>
               <th style="width: 50%">Nome</th>
               <th style="width: 15%">Ativa?</th>
@@ -11,7 +22,7 @@
           </tr>
       </thead>
       <tbody>
-          <tr *ngFor="let category of categories">
+          <tr *ngFor="let category of productCategories">
               <td data-title="ID:">
                   {{category.id}}
               </td>
@@ -30,7 +41,7 @@
                   </a>
               </td>
           </tr>
-          <tr *ngIf="!categories?.length">
+          <tr *ngIf="!productCategories?.length">
               <td colspan="5">
                   Nada a exibir por enquanto :(
               </td>
