Titles nos botões de ações

--- a/angular-app/src/app/components/pages/category/category-list/category-list.component.html
+++ b/angular-app/src/app/components/pages/category/category-list/category-list.component.html
@@ -36,12 +36,16 @@
                     {{category.created_at.date | date: 'dd/MM/yyyy'}}
                 </td>
                 <td data-title="Ações: ">
-                    <a href="javascript:void(0)" (click)="categoryEditService.showModalEdit(category)">
-                        <i class="fas fa-edit"></i>
+                    <a href="javascript:void(0)" 
+                       (click)="categoryEditService.showModalEdit(category)"
+                       title="Editar a categoria {{category.name}}">
+                       <i class="fas fa-edit"></i>
                     </a>
                     &nbsp;
-                    <a href="javascript:void(0)" (click)="categoryDeleteService.showModalDelete(category)">
-                        <i class="fas fa-trash-alt"></i>
+                    <a href="javascript:void(0)" 
+                       (click)="categoryDeleteService.showModalDelete(category)"
+                       title="Excluir a categoria {{category.name}}">
+                       <i class="fas fa-trash-alt"></i>
                     </a>
                 </td>
             </tr>
