--- a/angular-app/src/app/components/pages/product/product-edit-modal/product-edit-modal.component.html
+++ b/angular-app/src/app/components/pages/product/product-edit-modal/product-edit-modal.component.html
@@ -38,13 +38,12 @@
                         step="0.01">
             </div>
             <div class="form-group form-check">
-                <input type="checkbox" 
-                       name="active" 
-                       id="active"
-                       class="form-check-input"
-                       required 
-                       [(ngModel)]="product.active">
-                <label for="active">
+                <label>
+                    <input type="checkbox" 
+                        name="active" 
+                        class="form-check-input"
+                        required 
+                        [(ngModel)]="product.active">
                     Ativo?
                 </label>
             </div>
