--- a/angular-app/src/app/components/pages/product/product-new-modal/product-new-modal.component.html
+++ b/angular-app/src/app/components/pages/product/product-new-modal/product-new-modal.component.html
@@ -40,13 +40,14 @@
                         step="0.01">
             </div>
             <div class="form-group form-check">
-                <input type="checkbox" 
-                       name="active" 
-                       id="active"
-                       class="form-check-input"
-                       required 
-                       [(ngModel)]="product.active">
-                <label for="active">Ativo?</label>
+                <label>
+                    <input type="checkbox" 
+                        name="active" 
+                        class="form-check-input"
+                        required 
+                        [(ngModel)]="product.active">
+                    Ativo?
+                </label>
             </div>
         </div>
         <div modal-footer>
