Faltou exibir a columa E-mail

--- a/angular-app/src/app/components/pages/user/user-list/user-list.component.html
+++ b/angular-app/src/app/components/pages/user/user-list/user-list.component.html
@@ -3,7 +3,7 @@
   <table class="table table-striped table-hover table-sm">
     <thead>
         <tr>
-            <td colspan="4">
+            <td colspan="5">
                 <button class="btn btn-primary" (click)="userInsertService.showModalInsert()">
                     Novo usuário
                 </button>
@@ -20,12 +20,11 @@
         </tr>
         <tr>
             <th style="width: 5%">ID</th>
-            <th style="width: 55%">Nome</th>
-            <th style="width: 20%">Criado em</th>
-            <th style="width: 20%">
-              <span class="float-lg-right float-xl-right">
-                  Ações
-              </span>
+            <th style="width: 30%">Nome</th>
+            <th style="width: 25%">E-mail</th>
+            <th style="width: 25%">Criado em</th>
+            <th style="width: 15%">
+              Ações
             </th>
         </tr>
     </thead>
@@ -37,11 +36,14 @@
             <td data-title="Nome: ">
                 {{user.name}}
             </td>
+            <td data-title="E-mail: ">
+                {{user.email}}
+            </td>
             <td data-title="Criado em: ">
                 {{user.created_at.date | date: 'dd/MM/yyyy'}}
             </td>
             <td data-title="Ações: ">
-                <span class="float-lg-right float-xl-right" *ngIf="!trashed">
+                <span *ngIf="!trashed">
                     <a href="javascript:void(0)" 
                        (click)="userEditService.showModalEdit(user)"
                        title="Editar o usuário {{user.name}}">
@@ -54,7 +56,7 @@
                        <i class="fas fa-trash-alt"></i>
                     </a>
                 </span>
-                <span class="float-lg-right float-xl-right" *ngIf="trashed">
+                <span *ngIf="trashed">
                     <a href="javascript:void(0)" (click)="userRestoreService.showModalRestore(user)" title="Restaurar produto">
                         <i class="fas fa-thumbs-up"></i>
                     </a>
@@ -62,7 +64,7 @@
             </td>
         </tr>
         <tr *ngIf="!users.length">
-            <td colspan="4">
+            <td colspan="5">
                 Nada a exibir por enquanto :(
             </td>
         </tr>
