--- a/angular-app/src/app/components/pages/user/user-list/user-list.component.html
+++ b/angular-app/src/app/components/pages/user/user-list/user-list.component.html
@@ -81,3 +81,7 @@
         responsive=true>
     </pagination-controls>
 </div>
+<user-delete-modal 
+    (onSuccess)="userDeleteService.onDeleteSuccess($event)" 
+    (onError)="userDeleteService.onDeleteError($event)">
+</user-delete-modal>
